# rewire-camera-example

./: .gitignore  README.md  package.xml  pixi.toml  rewire.rbl  setup.cfg  setup.py
camera/: depth_publisher.py  image_publisher.py
launch/: camera.launch.py
rewire_camera/: depth_publisher.py
